--- a/.env.example
+++ b/.env.example
@@ -46,9 +46,8 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-RECAPTCHA_KEY=
-RECAPTCHA_SECRET=
-#RECAPTCHA_SECRET=
+RECAPTCHA_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
+RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
 ALGOLIA_APP_ID=
 ALGOLIA_KEY=
