--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: php
 
 php:
+
   - 7.1
   - 7.2
 
 before_script:
+  - composer install --dev --prefer-source --no-interaction
   - cp .env.travis .env
-  - composer install --no-interaction
   - php artisan key:generate
 
-cache:
-  directories:
-    - vendor
+script:
+  - vendor/bin/phpunit
+  - vendor/bin/phpcs app --standard=PSR2
