--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 /node_modules
-/public/hot
 /public/storage
+/public/hot
+/public/css/app.css
+/public/fonts
+/public/js/app.js
 /storage/*.key
+/storage/purify
 /vendor
-.env
-.env.backup
-.phpunit.result.cache
+/.idea
 Homestead.json
 Homestead.yaml
-npm-debug.log
-yarn-error.log
+.env
