--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "dependencies": {
         "algoliasearch": "^3.33.0",
         "at.js": "^1.5.3",
+        "highlight.js": "^9.15.10",
         "jquery.caret": "^0.3.1",
         "moment": "^2.24.0",
         "tributejs": "^3.7.2",
-        "trix": "0.11.1",
+        "trix": "^1.2.0",
         "vue-instantsearch": "1.7.0",
-        "vue-trix": "^1.0.0",
         "vue2-editor": "^2.10.2"
     }
 }
