--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -49,6 +50,8 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 RECAPTCHA_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 RECAPTCHA_SECRET=6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
 
+SCOUT_DRIVER=null
+SCOUT_QUEUE=true
 ALGOLIA_APP_ID=
 ALGOLIA_KEY=
 ALGOLIA_SECRET=
