--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.10.1",
         "axios": "^0.19",
+        "browser-sync": "^2.23.6",
+        "browser-sync-webpack-plugin": "^2.0.1",
         "bootstrap": "^4.1.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -21,8 +23,8 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "tailwindcss": "^0.4.1",
+        "vue": "^2.5.17"
     },
     "dependencies": {
         "algoliasearch": "^3.33.0",
@@ -32,6 +34,8 @@
         "moment": "^2.24.0",
         "tributejs": "^3.7.2",
         "trix": "^1.2.0",
+        "vue-js-modal": "^1.3.9",
+        "vue-template-compiler": "^2.6.10",
         "vue-instantsearch": "1.7.0",
         "vue2-editor": "^2.10.2"
     }
